--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
     <h1>Hacktoberfest 2022</h1>
-    
+    <h2>What is Hacktoberfest?</h2>
+    <p>Hacktoberfest is a month-long celebration of open-source software by DigitalOcean that encourages participation in giving back to the open-source community. Developers get involved by completing pull requests, participating in events, and donating to open source projects.</p>
+    <h2>What is Git Hub?</h2>
+    <p>GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere. This tutorial teaches you GitHub essentials like repositories, branches, commits, and pull requests.</p>
 </body>
 </html>
