--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <p>GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere. This tutorial teaches you GitHub essentials like repositories, branches, commits, and pull requests.</p>
     <h2>What is IEEE?</h2>
     <p>The Institute of Electrical and Electronics Engineers (IEEE) is a professional association for electronic engineering and electrical engineering (and associated disciplines) with its corporate office in New York City and its operations center in Piscataway, New Jersey. And also this is the world largest technical association.</p>
+    <h2>How do I register for Hacktoberfest?</h2>
+    <p>Registrations are now open via the website and this will get you all geared up to participate. You'll need to register to participate in Hacktoberfest, even if you are planning to participate as a contributor or maintainer. 1. Head to the Hacktoberfest website and click "Start Hacking" or "Registration now open".</p>
 </body>
 </html>
