--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <p>The Institute of Electrical and Electronics Engineers (IEEE) is a professional association for electronic engineering and electrical engineering (and associated disciplines) with its corporate office in New York City and its operations center in Piscataway, New Jersey. And also this is the world largest technical association.</p>
     <h2>How do I register for Hacktoberfest?</h2>
     <p>Registrations are now open via the website and this will get you all geared up to participate. You'll need to register to participate in Hacktoberfest, even if you are planning to participate as a contributor or maintainer. 1. Head to the Hacktoberfest website and click "Start Hacking" or "Registration now open".</p>
+    <h2>How do I register for Hacktoberfest?</h2>
+    <p>Registrations are now open via the website and this will get you all geared up to participate. You'll need to register to participate in Hacktoberfest, even if you are planning to participate as a contributor or maintainer. 1. Head to the Hacktoberfest website and click "Start Hacking" or "Registration now open".</p>
 </body>
 </html>
