--- a/contactus.html
+++ b/contactus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Contact Us</title>
+<title>Contact us</title>
 <style>
     body
     {
@@ -39,6 +39,7 @@
     <center>
 <form action="submit">
     <h3>Sign Up!</h3>
+    <hr>
 <table>
 <tr>
     <td>First Name</td>
@@ -93,6 +94,7 @@
 </tr>
 </table>
 </form>
+<hr>
 </center>
 </body>
 </html>
