--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
     <p>GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere. This tutorial teaches you GitHub essentials like repositories, branches, commits, and pull requests.</p>
     <h2>What is IEEE?</h2>
     <p>The Institute of Electrical and Electronics Engineers (IEEE) is a professional association for electronic engineering and electrical engineering (and associated disciplines) with its corporate office in New York City and its operations center in Piscataway, New Jersey. And also this is the world largest technical association.</p>
+    <h2>What are the advantages of github?</h2>
+    <p>1. It makes it easy to contribute to your open<br>
+        2. Documentation<br>
+        3. Showcase your work<br>
+        4. Markdown<br>
+        5. GitHub is a repository<br>
+        6. Track changes in your code across versions<br>
+        7. Integration options</p>
 </body>
 </html>
