--- a/index.html
+++ b/index.html
@@ -38,21 +38,24 @@
             border: 5px solid gray;
             margin: 0;
         }
+        .color{
+            background-color: rgba(151, 223, 199, 0.37);
+        }
     </style>
 </head>
 <body>
 
     <h1>Hacktoberfest 2022</h1>
     <h2>What is Hacktoberfest?</h2>
-    <div>
+    <div class="color">
     <p>Hacktoberfest is a month-long celebration of open-source software by DigitalOcean that encourages participation in giving back to the open-source community. Developers get involved by completing pull requests, participating in events, and donating to open source projects.</p>
 </div>
     <h2>What is Git Hub?</h2>
-    <div>
+    <div class="color">
     <p>GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere. This tutorial teaches you GitHub essentials like repositories, branches, commits, and pull requests.</p>
 </div>
     <h2>What is IEEE?</h2>
-    <div>
+    <div class="color">
     <p>The Institute of Electrical and Electronics Engineers (IEEE) is a professional association for electronic engineering and electrical engineering (and associated disciplines) with its corporate office in New York City and its operations center in Piscataway, New Jersey. And also this is the world largest technical association.</p>
 </div>
 </body>
