--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             margin: 0;
         }
         .color{
-            background-color: rgba(151, 223, 199, 0.37);
+            background-color: rgba(223, 151, 220, 0.37);
         }
     </style>
 </head>
@@ -58,5 +58,8 @@
     <div class="color">
     <p>The Institute of Electrical and Electronics Engineers (IEEE) is a professional association for electronic engineering and electrical engineering (and associated disciplines) with its corporate office in New York City and its operations center in Piscataway, New Jersey. And also this is the world largest technical association.</p>
 </div>
+<center>
+<img src="bg.jpg" alt="">
+</center>
 </body>
 </html>
