--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
     <h2>What is IEEE?</h2>
     <div class="color">
     <p>The Institute of Electrical and Electronics Engineers (IEEE) is a professional association for electronic engineering and electrical engineering (and associated disciplines) with its corporate office in New York City and its operations center in Piscataway, New Jersey. And also this is the world largest technical association.</p>
+</div>
+    <h2>How to participate in Hacktoberfest?</h2>
+    <div class="color">
+    <p>To complete Hacktoberfest, you must contribute four accepted pull requests or merge requests to opted-in repos on GitHub or GitLab, but we encourage participation of all levels–you can also participate by completing a single PR/MR, making a donation to your favorite open-source project, or organizing or attending a ...</p>
+</div>
+    <h2>What is Open Source?</h2>
+    <div class="color">
+    <p>Open-source software is computer software that is released under a license in which the copyright holder grants users the rights to use, study, change, and distribute the software and its source code to anyone and for any purpose. Open-source software may be developed in a collaborative public manner.</p>
+</div>
 
 </body>
 </html>
