--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
     <div class="color">
     <p>Open-source software is computer software that is released under a license in which the copyright holder grants users the rights to use, study, change, and distribute the software and its source code to anyone and for any purpose. Open-source software may be developed in a collaborative public manner.</p>
 </div>
+    <h2>Why we participate hackfest?</h2>
+    <div class="color">
+    <p>Participating in a hacking marathon is an opportunity for multidisciplinary groups to showcase their skills and develop new projects in record time! In a period of 30 hours (or more), participants can self-challenge, show leadership, meet people, and even discover new skills!</p>
+</div>
 
 </body>
 </html>
